@@ -1,3 +1,10 @@
+2008-03-27  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-keyboard-properties-a11y.c: (setup_a11y_tabs):
+	* gnome-keyboard-properties.c: (create_dialog), (setup_dialog):
+	* gnome-keyboard-properties.glade: fix various string and layout
+	issues (bug #521826)
+
 2008-03-24  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-keyboard-properties.c: (setup_dialog): don't show the typing
